Project update for spring boot 4 use, clenup and config updates